[package]
name = "techlead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-gpt-lib-rs = "0.1.5"
console = "0.15.5"
dotenvy = "0.15.6"
env_logger = "0.10.0"
ignore = "0.4.20"
indicatif = "0.17.3"
keyring = "2.0.1"
tokio = "1.26.0"
