[package]
name = "techlead"
version = "0.1.0"
edition = "2021"
description = "Techlead CLI is a command-line interface that enables developers to chat with an AI assistant powered by the OpenAI GPT language model, designed specifically to help with your Rust project."
license = "Apache-2.0"
repository = "https://github.com/Arend-Jan/chat-gpt-lib-rs"
authors = ["Arend-Jan Oosterveld <arendjan.oosterveld@gmail.com>"]
readme = "README.md"
keywords = ["openai", "chatgpt", "gpt", "api", "client"]
categories = ["api-bindings", "text-processing", "cli"]

[dependencies]
anyhow = "1.0.70"
chat-gpt-lib-rs = "0.1.7"
console = "0.15.5"
dotenvy = "0.15.6"
env_logger = "0.10.0"
ignore = "0.4.20"
indicatif = "0.17.3"
keyring = "2.0.1"
tokio = "1.26.0"
