[package]
name = "techlead"
version = "0.2.0"
edition = "2021"
description = "Techlead CLI is a command-line interface that enables developers to chat with an AI assistant powered by the OpenAI GPT language model, designed specifically to help with your Rust project."
license = "Apache-2.0"
repository = "https://github.com/Arend-Jan/techlead"
authors = ["Arend-Jan Oosterveld <arendjan.oosterveld@gmail.com>"]
readme = "README.md"
keywords = ["openai", "chatgpt", "gpt", "api", "client"]
categories = ["api-bindings", "text-processing", "cli"]

[dependencies]
anyhow = "1.0"
chat-gpt-lib-rs = "0.3.0"
console = "0.15"
dotenvy = "0.15"
env_logger = "0.10"
ignore = "0.4"
indicatif = "0.17"
keyring = "2.0"
tokio = "1.33"
